--- a/SignUp_Page/index.html
+++ b/SignUp_Page/index.html
@@ -20,7 +20,7 @@
 
     <button onclick="signup()">Sign Up</button>
     
-    <a href="file:///D:/YASH/login_page/index.html" id ="link"></a>
+    <a href="http://127.0.0.1:5500/login_page/index.html" id ="link"></a>
 
     <script src="script.js"></script>
 </body>
