--- a/Mobile_Css/index.html
+++ b/Mobile_Css/index.html
@@ -1,22 +1,50 @@
-<!-- Products -->
-<section id="products">
-    <div class="container">
-        <h2>Our Products</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive UI - Orange Theme</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-        <div class="product-grid">
+  <header>
+    <h1>Responsive Orange UI</h1>
+    <p>Mobile-Friendly Web Page</p>
+  </header>
 
-            <div class="product-card">
-                <button class="btn">Buy Now</button>
-            </div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
 
-            <div class="product-card">
-                <button class="btn">Buy Now</button>
-            </div>
+  <div class="container">
+    <aside class="sidebar">
+      <h2>Sidebar</h2>
+      <p>This sidebar adapts on mobile screens.</p>
+    </aside>
 
-            <div class="product-card">
-                <button class="btn">Buy Now</button>
-            </div>
+    <main class="content">
+      <h2>Main Content</h2>
+      <p>
+        This page demonstrates <strong>Flexbox</strong>,
+        <strong>Media Queries</strong>, and a
+        <strong>responsive layout</strong>.
+      </p>
 
-        </div>
-    </div>
-</section>
+      <div class="cards">
+        <div class="card">Card One</div>
+        <div class="card">Card Two</div>
+        <div class="card">Card Three</div>
+      </div>
+    </main>
+  </div>
+
+  <footer>
+    <p>© 2026 Responsive UI Assignment</p>
+  </footer>
+
+</body>
+</html>
